cluster/homepage/homepage-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
