cluster/homepage/homepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: http
      port: 4180
      targetPort: http
