cluster/homepage/homepage-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: homepage
spec:
  subdomain: homepage
  to:
    kind: Service
    name: homepage
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
